Updating final version

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "PA1_template"
 author: "Johnny Vargas (SpaceMan51)"
-date: "Thursday, May 14, 2015"
+date: "Thursday, June 11, 2015"
 output:
   html_document:
     fig_caption: yes
@@ -47,6 +47,7 @@ Show any code that is needed to
 # Load the data
 # This code requires that the raw data file exist in the working directory
 # No additional pre-processing is required for the first few steps other than ensuring to load with header and sep options
+unzip("activity.zip")
 activity <- read.csv(file="activity.csv", header=TRUE, sep=",")
 
 ```
@@ -110,9 +111,9 @@ max_steps_annotate <- paste("Average max steps of", format(round(Max_steps$steps
 
 p <- ggplot(activity_dailyavg_byinterval, aes(interval, steps))
 p + geom_line() + 
-        geom_hline(yintercept = max(activity_dailyavg_byinterval$steps), color="blue") + 
+        geom_hline(yintercept = max(activity_dailyavg_byinterval$steps), color="blue", linetype="dotted") + 
         geom_text(x = 1650, y = 200, color = "blue", label = max_steps_annotate, size=4) +
-        geom_vline(xintercept = Max_steps$interval, color = "blue")
+        geom_vline(xintercept = Max_steps$interval, color = "blue", linetype="dotted")
         
 print(max_steps_annotate)
 
@@ -217,5 +218,12 @@ For this part the weekdays() function may be of some help here. Use the dataset 
 
 
 ```{r}
-
+## add new column and identify as weekday vs weekend
+activity_noNA$weekday <- ifelse(weekdays(as.Date(activity_noNA$date)) %in% c("Saturday", "Sunday"), "weekend", "weekday")
+## factorize weekday into factor with 2 levels "weekday" and "weekend"
+activity_noNA <- transform(activity_noNA, weekday = factor(weekday))
+## aggregate by interval for weekdays and weekends
+activity_noNA_intervalavgbyweekend <- aggregate(steps ~ interval + weekday, data=activity_noNA, mean)
+## plot in facet plot showing comparison of weekday vs weekend interval averages
+ggplot(activity_noNA_intervalavgbyweekend, aes(interval, steps, color=weekday)) + geom_line() + facet_grid(weekday ~ .) + xlab("Interval") + ylab("Average Number of Steps") + guides(color=FALSE)
 ```
